<resources>
    <string name="app_name">Snap Fitness Tablet App</string>

    <string name="title_item_detail">Item Detail</string>
    <string name="txtCity1">Free personal training.</string>
    <string name="txtCity2">Convenient parking for all members.</string>
    <string name="txtCity3">Conveniently located in a friendly and safe neighborhood</string>
    <string name="txtCity4">The fitness center is spacious enough to accommodate members.</string>
    <string name="txtCityTitle">Membership Fees and Information: </string>
    <string name="txtCityInfo">Full Use: Our Full Use membership gives you access to the gym any time. This “unlimited” option also includes participation in all classes, as well as three free personal training sessions ($87)

\n\nDay Use: This option is perfect for the “work from home” crowd. Day Use membership hours are 6AM-6PM, Monday through Friday. All classes during these times are included, as well as three free personal training sessions ($80)

\n\nWeekend Membership: Perfect for those who use a fitness center at their work. The Weekend Membership allows access Saturday and Sunday, including all classes held those days. ($60)

\n\nTeen Memberships: This membership is available for teens 13-17 years old. They are allowed access to the gym Monday–Sunday between 2:30–5:30 p.m. Our staff will ensure that they receive an orientation to the weight room with a program designed exclusively for them. ($40)

</string>
    <string name="txtDescription">City Fitness Image</string>

    <string name="txtFitness1">Professional training.</string>
    <string name="txtFitness2">Fun, and engaging community based fitness activities.</string>
    <string name="txtFitness3">Cardio and resistance training equipments.</string>
    <string name="txtFitness4">Convenient location.</string>
    <string name="txtFitnessTitle">Fitness Together Club and Membership Info.</string>
    <string name="txtFitnessInfo">Fitness Together is America\'s #1 personal training franchise. Learn more about how you can turn your passion for fitness into your own studio!
\n\nPersonal Training Call for availability.
\n\nAddress: 3222 N St NW, Washington, DC 20007
\n\nPhone:(202) 625-8484
\n\nHours: Open today · 7:30 AM – 4:30 PM.</string>

    <string name="txtVida1">State of the art facilities and equipments.</string>
    <string name="txtVida2">Wide a spacious gym indoor fitness facility.</string>
    <string name="txtVida3">Free professional personal training.</string>
    <string name="txtVida4">Conveniently located in a upscale downtown environment.</string>
    <string name="txtVidaTitle">Memebership and Gym Info</string>
    <string name="txtVidaInfo">Located in: Verizon Center
\n\nAddress: 601 F St NW,100, Washington, DC 20004-1605
\n\nPhone:(202) 393-8432
\n\nHours: Open today · 7:00 AM – 9:00 PM
        \n\nIndividual Membership:
\n\nThis single-club membership includes all of the equipment, amenities, and group fitness classes and provides you access to the VIDA Fitness location of your choice. This membership requires a 1-year commitment and then converts to a month-to-month membership.
</string>

    <string name="title_fitness_together">Fitness Together</string>
    <string name="title_city_fitness">City Fitness</string>
    <string name="title_vida_fitness">Vida Fitness</string>
    <string name="title_Menu">Best of DC Fitness Clubs</string>








</resources>
